# RocmTop

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TEST_RESULTS.md  index.html  package-lock.json  package.json  tasks.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  index.html  styles.css
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/: AnimatedNumber.tsx  AppSkeleton.tsx  Skeleton.tsx  Sparkline.tsx  Toast.tsx  Tooltip.tsx
src/hooks/: useGpuHistory.ts  useToast.ts
src/types/: gpu.ts
