[package]
name = "rocm-top"
version = "1.0.0"
description = "Lightweight AMD GPU Monitor for Linux"
authors = ["Twarga"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
